[project]
name = "catacombs-of-ashes"
version = "0.1.0"
description = ""
authors = [{ name = "k1ngS", email = "marcos.beltrao@outlook.pt" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["rich>=14.1.0,<15.0.0"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.18.2"
black = "^25.9.0"
isort = "^6.0.1"
pre-commit = "^4.3.0"
